внес правки по табличкам

--- a/course_work.tex
+++ b/course_work.tex
@@ -17,6 +17,7 @@
 \titlespacing{\paragraph}
 {0cm}{2ex plus 1ex minus .2ex}{.4ex plus.2ex}
 
+
 % --------------------------------------------------------------------------%
 
 
@@ -61,7 +62,7 @@
 
 \chair{теоретических основ компьютерной безопасности и криптографии}
 
-\title{Машинное обучение и трейдинг}
+\title{Исследование основных фигур технического анализа}
 
 \course{3}
 
@@ -656,16 +657,19 @@
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 2                                         & 2          & 0.023 \\ \hline
-        Нисходящий флаг             & 2                                         & 2          & 0.023 \\ \hline
-        Восходящий флаг             & 4                                         & 3          & 0.047 \\ \hline
-        Прямоугольник               & 3                                         & 3          & 0.035 \\ \hline
-        Нисходящий ромб             & 1                                         & 1          & 0.012 \\ \hline
+        Нисходящий вымпел           & 2                                         & 2          & 0.105 \\ \hline
+        Восходящий вымпел           & 2                                         & 2          & 0.105 \\ \hline
+        Нисходящий флаг             & 2                                         & 2          & 0.105 \\ \hline
+        Восходящий флаг             & 4                                         & 3          & 0.210 \\ \hline
+        Прямоугольник               & 3                                         & 3          & 0.158 \\ \hline
+        Нисходящий ромб             & 1                                         & 1          & 0.055 \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-        Голова и плечи              & 2                                         & 2          & 0.023 \\ \hline
-        Перевернутые голова и плечи & 3                                         & 3          & 0.035 \\ \hline
+        Голова и плечи              & 2                                         & 2          & 0.105 \\ \hline
+        Перевернутые голова и плечи & 3                                         & 3          & 0.158 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Energy Focus}       
+    \end{table}
 
     Исходя из полученных данных, можно сделать вывод, что для акций Energy Focus
     не было найдено достаточное количество технических фигур для проведения 
@@ -686,16 +690,19 @@
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 1                                         & 1          & 0.013 \\ \hline
+        Нисходящий вымпел           & 0                                         & 0          & 0     \\ \hline
+        Восходящий вымпел           & 1                                         & 1          & 0.091 \\ \hline
         Нисходящий флаг             & 0                                         & 0          & 0     \\ \hline
-        Восходящий флаг             & 6                                         & 6          & 0.078 \\ \hline
+        Восходящий флаг             & 6                                         & 6          & 0.545 \\ \hline
         Прямоугольник               & 0                                         & 0          & 0     \\ \hline
         Нисходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-        Голова и плечи              & 3                                         & 3          & 0.039 \\ \hline
-        Перевернутые голова и плечи & 1                                         & 1          & 0.013 \\ \hline
+        Голова и плечи              & 3                                         & 3          & 0.272 \\ \hline
+        Перевернутые голова и плечи & 1                                         & 1          & 0.091 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Yandex}     
+    \end{table}
 
     В данный момент Yandex относится к компаниям, имеющим акции с 
     высокой волатильностью. Исходя из полученных данных, можно сделать вывод
@@ -717,16 +724,19 @@
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 2                                         & 1          & 0.038 \\ \hline
-        Нисходящий флаг             & 1                                         & 0          & 0.019 \\ \hline
-        Восходящий флаг             & 2                                         & 2          & 0.038 \\ \hline
-        Прямоугольник               & 2                                         & 2          & 0.038 \\ \hline
-        Нисходящий ромб             & 1                                         & 0          & 0.019 \\ \hline
+        Нисходящий вымпел           & 1                                         & 1          & 0.072 \\ \hline
+        Восходящий вымпел           & 2                                         & 1          & 0.142 \\ \hline
+        Нисходящий флаг             & 1                                         & 0          & 0.072 \\ \hline
+        Восходящий флаг             & 2                                         & 2          & 0.142 \\ \hline
+        Прямоугольник               & 2                                         & 2          & 0.142 \\ \hline
+        Нисходящий ромб             & 1                                         & 0          & 0.072 \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-        Голова и плечи              & 1                                         & 1          & 0.019 \\ \hline
-        Перевернутые голова и плечи & 4                                         & 4          & 0.075 \\ \hline
+        Голова и плечи              & 1                                         & 1          & 0.072 \\ \hline
+        Перевернутые голова и плечи & 4                                         & 4          & 0.286 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Recruiter.com}      
+    \end{table}
 
     В данный момент, особенно в связи с пандемией, онлайн--рекрутмент стал одним
     из самых популярных направлений бизнеса, поэтому рассмотрим в качестве
@@ -751,16 +761,19 @@
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 1                                         & 1          & 0.014 \\ \hline
-        Нисходящий флаг             & 1                                         & 1          & 0.014 \\ \hline
-        Восходящий флаг             & 4                                         & 2          & 0.058 \\ \hline
-        Прямоугольник               & 1                                         & 0          & 0.014 \\ \hline
+        Нисходящий вымпел           & 1                                         & 1          & 0.077 \\ \hline
+        Восходящий вымпел           & 1                                         & 1          & 0.077 \\ \hline
+        Нисходящий флаг             & 1                                         & 1          & 0.077 \\ \hline
+        Восходящий флаг             & 4                                         & 2          & 0.307 \\ \hline
+        Прямоугольник               & 1                                         & 0          & 0.077 \\ \hline
         Нисходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-        Голова и плечи              & 1                                         & 1          & 0.014 \\ \hline
-        Перевернутые голова и плечи & 4                                         & 1          & 0.058 \\ \hline
+        Голова и плечи              & 1                                         & 1          & 0.077 \\ \hline
+        Перевернутые голова и плечи & 4                                         & 1          & 0.307 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Greenbox POS}    
+    \end{table}
 
     Ввиду развития технологий электронных платежей с использованием \\блокчейна,
     рассмотрим котировки компании Greenbox POS "--- одной из самых волатильных 
@@ -787,16 +800,19 @@
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 1                                         & 1          & 0.01  \\ \hline
+        Нисходящий вымпел           & 0                                         & 0          & 0     \\ \hline
+        Восходящий вымпел           & 1                                         & 1          & 0.048  \\ \hline
         Нисходящий флаг             & 0                                         & 0          & 0     \\ \hline
-        Восходящий флаг             & 14                                        & 14         & 0.136 \\ \hline
-        Прямоугольник               & 1                                         & 1          & 0.01  \\ \hline
+        Восходящий флаг             & 14                                        & 14         & 0.667 \\ \hline
+        Прямоугольник               & 1                                         & 1          & 0.048 \\ \hline
         Нисходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-        Голова и плечи              & 4                                         & 4          & 0.039 \\ \hline
-        Перевернутые голова и плечи & 1                                         & 1          & 0.01  \\ \hline
+        Голова и плечи              & 4                                         & 4          & 0.190 \\ \hline
+        Перевернутые голова и плечи & 1                                         & 1          & 0.048 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Campbell Soup Company}     
+    \end{table}
 
     
     Campbell Soup Company (также известная как Campbell's) "--- американская 
@@ -823,22 +839,27 @@
         \includegraphics[width=0.8\textwidth]{pic/JNJ.jpg}
         \caption{График акций и технические фигуры Johnson and Johnson}
     \end{figure}
-   
+    
+    \pagebreak
+
     \begin{table}[!hbt]
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-        Вымпел                      & 2                                         & 2          & 0.025 \\ \hline
+        Нисходящий вымпел           & 0                                         & 0          & 0     \\ \hline
+        Восходящий вымпел           & 2                                         & 2          & 0.222 \\ \hline
         Нисходящий флаг             & 0                                         & 0          & 0     \\ \hline
-        Восходящий флаг             & 6                                         & 6          & 0.076 \\ \hline
+        Восходящий флаг             & 6                                         & 6          & 0.667 \\ \hline
         Прямоугольник               & 0                                         & 0          & 0     \\ \hline
         Нисходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 0                                         & 0          & 0     \\ \hline
-        Перевернутые голова и плечи & 1                                         & 1          & 0.013 \\ \hline
+        Перевернутые голова и плечи & 1                                         & 1          & 0.111 \\ \hline
         \end{tabular}
-        \end{table}
+        \captionsetup{justification=centering}
+        \caption{Сводная таблица для котировок Johnson and Johnson}    
+    \end{table}
 
     
         Johnson and Johnson "--- американская холдинговая компания, возглавляющая
@@ -860,21 +881,26 @@
             \caption{График акций и технические фигуры Altria Group}
         \end{figure}
        
+        \pagebreak
+
         \begin{table}[!hbt]
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
             Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-            Вымпел                      & 2                                         & 2          & 0.018 \\ \hline
+            Нисходящий вымпел           & 0                                         & 0          & 0     \\ \hline
+            Восходящий вымпел           & 2                                         & 2          & 0.090 \\ \hline
             Нисходящий флаг             & 0                                         & 0          & 0     \\ \hline
-            Восходящий флаг             & 17                                        & 17         & 0.153 \\ \hline
+            Восходящий флаг             & 17                                        & 17         & 0.773 \\ \hline
             Прямоугольник               & 0                                         & 0          & 0     \\ \hline
-            Нисходящий ромб             & 1                                         & 1          & 0.009 \\ \hline
+            Нисходящий ромб             & 1                                         & 1          & 0.045 \\ \hline
             Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
-            Голова и плечи              & 1                                         & 1          & 0.009 \\ \hline
-            Перевернутые голова и плечи & 1                                         & 1          & 0.009 \\ \hline
+            Голова и плечи              & 1                                         & 1          & 0.090 \\ \hline
+            Перевернутые голова и плечи & 1                                         & 1          & 0.090 \\ \hline
             \end{tabular}
-            \end{table}
+            \captionsetup{justification=centering}
+            \caption{Сводная таблица для котировок Altria Group}    
+        \end{table}
     
         
             Altria Group "--- один из лидеров мирового рынка табачных изделий, 
@@ -902,21 +928,26 @@
             \caption{График акций и технические фигуры Sprouts Farmers Market}
         \end{figure}
        
+        \pagebreak
+
         \begin{table}[!hbt]
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
             Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-            Вымпел                      & 2                                         & 2          & 0.017 \\ \hline
-            Нисходящий флаг             & 1                                         & 1          & 0.009 \\ \hline
-            Восходящий флаг             & 15                                        & 15         & 0.128 \\ \hline
+            Нисходящий вымпел           & 1                                         & 1          & 0.038 \\ \hline
+            Восходящий вымпел           & 2                                         & 2          & 0.076 \\ \hline
+            Нисходящий флаг             & 1                                         & 1          & 0.038 \\ \hline
+            Восходящий флаг             & 15                                        & 15         & 0.577 \\ \hline
             Прямоугольник               & 0                                         & 0          & 0     \\ \hline
             Нисходящий ромб             & 0                                         & 0          & 0     \\ \hline
-            Восходящий ромб             & 3                                         & 3          & 0.026 \\ \hline
+            Восходящий ромб             & 3                                         & 3          & 0.115 \\ \hline
             Голова и плечи              & 0                                         & 0          & 0     \\ \hline
-            Перевернутые голова и плечи & 4                                         & 4          & 0.034 \\ \hline
+            Перевернутые голова и плечи & 4                                         & 4          & 0.154 \\ \hline
             \end{tabular}
-            \end{table}
+            \captionsetup{justification=centering}
+            \caption{Сводная таблица для котировок Sprouts Farmers Market}     
+        \end{table}
     
         
             Sprouts Farmers Market "--- сеть супермаркетов, специализирующаяся 
@@ -946,22 +977,27 @@
             \includegraphics[width=0.8\textwidth]{pic/BTC.jpg}
             \caption{График акций и технические фигуры Bitcoin}
         \end{figure}
-       
+
+        \pagebreak
+        
         \begin{table}[!hbt]
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
             Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-            Вымпел                      & 1                                         & 1          & 0.013 \\ \hline
-            Нисходящий флаг             & 1                                         & 1          & 0.013 \\ \hline
-            Восходящий флаг             & 2                                         & 2          & 0.026 \\ \hline
-            Прямоугольник               & 3                                         & 3          & 0.039 \\ \hline
-            Нисходящий ромб             & 1                                         & 1          & 0.013 \\ \hline
-            Восходящий ромб             & 1                                         & 1          & 0.013 \\ \hline
-            Голова и плечи              & 5                                         & 5          & 0.065 \\ \hline
-            Перевернутые голова и плечи & 5                                         & 5          & 0.065 \\ \hline
+            Нисходящий вымпел           & 1                                         & 1          & 0.05 \\ \hline
+            Восходящий вымпел           & 1                                         & 1          & 0.05 \\ \hline
+            Нисходящий флаг             & 1                                         & 1          & 0.05 \\ \hline
+            Восходящий флаг             & 2                                         & 2          & 0.1 \\ \hline
+            Прямоугольник               & 3                                         & 3          & 0.15 \\ \hline
+            Нисходящий ромб             & 1                                         & 1          & 0.05 \\ \hline
+            Восходящий ромб             & 1                                         & 1          & 0.05 \\ \hline
+            Голова и плечи              & 5                                         & 5          & 0.25 \\ \hline
+            Перевернутые голова и плечи & 5                                         & 5          & 0.25 \\ \hline
             \end{tabular}
-            \end{table}
+            \captionsetup{justification=centering}
+            \caption{Сводная таблица для котировок Bitcoin}     
+        \end{table}
         
         Bitcoin является самой популярной криптовалютой в мире.
 
@@ -989,16 +1025,19 @@
             \begin{tabular}{|l|c|c|c|}
             \hline
             Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
-            Вымпел                      & 1                                         & 1          & 0.004 \\ \hline
-            Нисходящий флаг             & 1                                         & 1          & 0.004 \\ \hline
-            Восходящий флаг             & 24                                        & 23         & 0.09  \\ \hline
-            Прямоугольник               & 8                                         & 8          & 0.03  \\ \hline
-            Нисходящий ромб             & 3                                         & 3          & 0.011 \\ \hline
-            Восходящий ромб             & 1                                         & 1          & 0.004 \\ \hline
-            Голова и плечи              & 13                                        & 13         & 0.049 \\ \hline
-            Перевернутые голова и плечи & 11                                        & 11         & 0.041 \\ \hline
+            Нисходящий вымпел           & 1                                         & 1          & 0.016 \\ \hline
+            Восходящий вымпел           & 1                                         & 1          & 0.016 \\ \hline
+            Нисходящий флаг             & 1                                         & 1          & 0.016 \\ \hline
+            Восходящий флаг             & 24                                        & 23         & 0.380  \\ \hline
+            Прямоугольник               & 8                                         & 8          & 0.127  \\ \hline
+            Нисходящий ромб             & 3                                         & 3          & 0.048 \\ \hline
+            Восходящий ромб             & 1                                         & 1          & 0.016 \\ \hline
+            Голова и плечи              & 13                                        & 13         & 0.208 \\ \hline
+            Перевернутые голова и плечи & 11                                        & 11         & 0.176 \\ \hline
             \end{tabular}
-            \end{table}
+            \captionsetup{justification=centering}
+            \caption{Сводная таблица для котировок EOS}    
+        \end{table}
         
         Для данной акции всего было найдено 266 технических фигур за 
         рассматриваемый период и является максимальным количеством из
