Изменил расположение подписей таблиц

--- a/course_work.tex
+++ b/course_work.tex
@@ -648,11 +648,12 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/EFOI.jpg}
+        \includegraphics[width=\textwidth]{pic/EFOI.jpg}
         \caption{График акций и технические фигуры Energy Focus}
     \end{figure}
    
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Energy Focus}
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
@@ -666,9 +667,7 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 2                                         & 2          & 0.105 \\ \hline
         Перевернутые голова и плечи & 3                                         & 3          & 0.158 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Energy Focus}       
+        \end{tabular}      
     \end{table}
 
     Исходя из полученных данных, можно сделать вывод, что для акций Energy Focus
@@ -681,11 +680,12 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/Yandex.jpg}
+        \includegraphics[width=\textwidth]{pic/Yandex.jpg}
         \caption{График акций и технические фигуры Yandex}
     \end{figure}
    
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Yandex}
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
@@ -699,9 +699,7 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 3                                         & 3          & 0.272 \\ \hline
         Перевернутые голова и плечи & 1                                         & 1          & 0.091 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Yandex}     
+        \end{tabular}   
     \end{table}
 
     В данный момент Yandex относится к компаниям, имеющим акции с 
@@ -715,11 +713,12 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/RCRT.jpg}
+        \includegraphics[width=\textwidth]{pic/RCRT.jpg}
         \caption{График акций и технические фигуры Recruiter.com}
     \end{figure}
    
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Recruiter.com}
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
@@ -733,9 +732,7 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 1                                         & 1          & 0.072 \\ \hline
         Перевернутые голова и плечи & 4                                         & 4          & 0.286 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Recruiter.com}      
+        \end{tabular}    
     \end{table}
 
     В данный момент, особенно в связи с пандемией, онлайн--рекрутмент стал одним
@@ -752,11 +749,12 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/GBOX.jpg}
+        \includegraphics[width=\textwidth]{pic/GBOX.jpg}
         \caption{График акций и технические фигуры Greenbox POS}
     \end{figure}
    
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Greenbox POS}
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
@@ -770,9 +768,7 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 1                                         & 1          & 0.077 \\ \hline
         Перевернутые голова и плечи & 4                                         & 1          & 0.307 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Greenbox POS}    
+        \end{tabular}   
     \end{table}
 
     Ввиду развития технологий электронных платежей с использованием \\блокчейна,
@@ -791,17 +787,18 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/CPB.jpg}
+        \includegraphics[width=\textwidth]{pic/CPB.jpg}
         \caption{График акций и технические фигуры Campbell Soup Company}
     \end{figure}
    
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Campbell Soup Company} 
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
         Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
         Нисходящий вымпел           & 0                                         & 0          & 0     \\ \hline
-        Восходящий вымпел           & 1                                         & 1          & 0.048  \\ \hline
+        Восходящий вымпел           & 1                                         & 1          & 0.048 \\ \hline
         Нисходящий флаг             & 0                                         & 0          & 0     \\ \hline
         Восходящий флаг             & 14                                        & 14         & 0.667 \\ \hline
         Прямоугольник               & 1                                         & 1          & 0.048 \\ \hline
@@ -809,9 +806,7 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 4                                         & 4          & 0.190 \\ \hline
         Перевернутые голова и плечи & 1                                         & 1          & 0.048 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Campbell Soup Company}     
+        \end{tabular}   
     \end{table}
 
     
@@ -836,13 +831,14 @@
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.8\textwidth]{pic/JNJ.jpg}
+        \includegraphics[width=\textwidth]{pic/JNJ.jpg}
         \caption{График акций и технические фигуры Johnson and Johnson}
     \end{figure}
     
     \pagebreak
 
     \begin{table}[!hbt]
+        \caption{Сводная таблица для котировок Johnson and Johnson} 
         \centering
         \begin{tabular}{|l|c|c|c|}
         \hline
@@ -856,16 +852,14 @@
         Восходящий ромб             & 0                                         & 0          & 0     \\ \hline
         Голова и плечи              & 0                                         & 0          & 0     \\ \hline
         Перевернутые голова и плечи & 1                                         & 1          & 0.111 \\ \hline
-        \end{tabular}
-        \captionsetup{justification=centering}
-        \caption{Сводная таблица для котировок Johnson and Johnson}    
+        \end{tabular} 
     \end{table}
 
     
-        Johnson and Johnson "--- американская холдинговая компания, возглавляющая
-        группу из более чем 250 дочерних компаний по всему миру, производящих
-        лекарственные препараты, санитарно-гигиенические товары и медицинское
-        оборудование.
+        Johnson and Johnson "--- американская холдинговая компания,
+        возглавляющая группу из более чем 250 дочерних компаний по всему миру,
+        производящих лекарственные препараты, санитарно-гигиенические товары и
+        медицинское оборудование.
     
         Исходя из полученных данных, можно сделать вывод, что акции не относятся
         к техничным. Из рассматриваемых фигур не были найдены: <<Нисходящий 
@@ -877,7 +871,7 @@
     
         \begin{figure}[H]
             \centering
-            \includegraphics[width=0.8\textwidth]{pic/MO.jpg}
+            \includegraphics[width=\textwidth]{pic/MO.jpg}
             \caption{График акций и технические фигуры Altria Group}
         \end{figure}
        
@@ -885,6 +879,7 @@
 
         \begin{table}[!hbt]
             \centering
+            \caption{Сводная таблица для котировок Altria Group} 
             \begin{tabular}{|l|c|c|c|}
             \hline
             Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
@@ -898,15 +893,13 @@
             Голова и плечи              & 1                                         & 1          & 0.090 \\ \hline
             Перевернутые голова и плечи & 1                                         & 1          & 0.090 \\ \hline
             \end{tabular}
-            \captionsetup{justification=centering}
-            \caption{Сводная таблица для котировок Altria Group}    
+      
         \end{table}
     
         
-            Altria Group "--- один из лидеров мирового рынка табачных изделий, 
-            который является материнской компанией таких производителей сигарет, 
-            как Philip Morris USA, John Middleton и U.S. Smokeless Tobacco 
-            Company.
+        Altria Group "--- один из лидеров мирового рынка табачных изделий,
+        который является материнской компанией таких производителей сигарет, как
+        Philip Morris USA, John Middleton и U.S. Smokeless Tobacco Company.
     
         
         Для данной акции всего было найдено 111 технических фигур за 
@@ -924,13 +917,14 @@
     
         \begin{figure}[H]
             \centering
-            \includegraphics[width=0.8\textwidth]{pic/SFM.jpg}
+            \includegraphics[width=\textwidth]{pic/SFM.jpg}
             \caption{График акций и технические фигуры Sprouts Farmers Market}
         \end{figure}
        
         \pagebreak
 
         \begin{table}[!hbt]
+            \caption{Сводная таблица для котировок Sprouts Farmers Market} 
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
@@ -945,13 +939,12 @@
             Голова и плечи              & 0                                         & 0          & 0     \\ \hline
             Перевернутые голова и плечи & 4                                         & 4          & 0.154 \\ \hline
             \end{tabular}
-            \captionsetup{justification=centering}
-            \caption{Сводная таблица для котировок Sprouts Farmers Market}     
+                 
         \end{table}
     
         
-            Sprouts Farmers Market "--- сеть супермаркетов, специализирующаяся 
-            на свежих, натуральных и органических продуктах.
+        Sprouts Farmers Market "--- сеть супермаркетов, специализирующаяся на 
+        свежих, натуральных и органических продуктах.
     
         
         Для данной акции всего было найдено 117 технических фигур за 
@@ -974,29 +967,30 @@
     
         \begin{figure}[H]
             \centering
-            \includegraphics[width=0.8\textwidth]{pic/BTC.jpg}
+            \includegraphics[width=\textwidth]{pic/BTC.jpg}
             \caption{График акций и технические фигуры Bitcoin}
         \end{figure}
 
         \pagebreak
         
         \begin{table}[!hbt]
+            \caption{Сводная таблица для котировок Bitcoin}
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
-            Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля  \\ \hline
+            Фигура                      & \multicolumn{1}{l|}{Количество найденных} & Совпадение & Доля \\ \hline
             Нисходящий вымпел           & 1                                         & 1          & 0.05 \\ \hline
             Восходящий вымпел           & 1                                         & 1          & 0.05 \\ \hline
             Нисходящий флаг             & 1                                         & 1          & 0.05 \\ \hline
-            Восходящий флаг             & 2                                         & 2          & 0.1 \\ \hline
+            Восходящий флаг             & 2                                         & 2          & 0.1  \\ \hline
             Прямоугольник               & 3                                         & 3          & 0.15 \\ \hline
             Нисходящий ромб             & 1                                         & 1          & 0.05 \\ \hline
             Восходящий ромб             & 1                                         & 1          & 0.05 \\ \hline
             Голова и плечи              & 5                                         & 5          & 0.25 \\ \hline
             Перевернутые голова и плечи & 5                                         & 5          & 0.25 \\ \hline
             \end{tabular}
-            \captionsetup{justification=centering}
-            \caption{Сводная таблица для котировок Bitcoin}     
+           
+                 
         \end{table}
         
         Bitcoin является самой популярной криптовалютой в мире.
@@ -1016,11 +1010,12 @@
     
         \begin{figure}[H]
             \centering
-            \includegraphics[width=0.8\textwidth]{pic/EOS.jpg}
+            \includegraphics[width=0.9\textwidth]{pic/EOS.jpg}
             \caption{График акций и технические фигуры EOS}
         \end{figure}
        
         \begin{table}[!hbt]
+            \caption{Сводная таблица для котировок EOS}
             \centering
             \begin{tabular}{|l|c|c|c|}
             \hline
@@ -1028,15 +1023,13 @@
             Нисходящий вымпел           & 1                                         & 1          & 0.016 \\ \hline
             Восходящий вымпел           & 1                                         & 1          & 0.016 \\ \hline
             Нисходящий флаг             & 1                                         & 1          & 0.016 \\ \hline
-            Восходящий флаг             & 24                                        & 23         & 0.380  \\ \hline
-            Прямоугольник               & 8                                         & 8          & 0.127  \\ \hline
+            Восходящий флаг             & 24                                        & 23         & 0.380 \\ \hline
+            Прямоугольник               & 8                                         & 8          & 0.127 \\ \hline
             Нисходящий ромб             & 3                                         & 3          & 0.048 \\ \hline
             Восходящий ромб             & 1                                         & 1          & 0.016 \\ \hline
             Голова и плечи              & 13                                        & 13         & 0.208 \\ \hline
             Перевернутые голова и плечи & 11                                        & 11         & 0.176 \\ \hline
-            \end{tabular}
-            \captionsetup{justification=centering}
-            \caption{Сводная таблица для котировок EOS}    
+            \end{tabular}  
         \end{table}
         
         Для данной акции всего было найдено 266 технических фигур за 
