--- a/thesis.bib
+++ b/thesis.bib
@@ -3,7 +3,8 @@
   author={Натенберг, Шелдон},
   journal={М.: Альпина Паблишер},
   pages={546},
-  year={2011}
+  year={2011},
+  language = "russian"
 }
 
 @incollection{wei2006time,
@@ -53,9 +54,13 @@
   publisher={Packt Publishing Ltd}
 }
 
-@BOOK{HIST,
-  title={Фондовая биржа в 1980-е. Трейдинг до--компьютерной эпохи. Как это было (Часть 1) [{Э}лектронный ресурс]},
-  note={URL:~\url{https://scorum.ru/ru-ru/other/@goldenbogdan/fondovaya-birzha-v-1980-e-treiding-do-kompyuternoi-epokhi-kak-eto-bylo-chast-1} (Дата обращения 09.06.2022). Загл. с экр. Яз. рус.},
+@inproceedings{HIST,
+  title={Развитие биржевых технологий в эпоху информационной экономики},
+  author={Усенко, Роман Станиславович and Троценко, Анастасия Юрьевна},
+  booktitle={Теория и практика экономики и предпринимательства},
+  pages={245--246},
+  year={2021},
+  language = "russian"
 }
 
 @book{GF,
@@ -72,5 +77,6 @@
   number={65},
   pages={120--129},
   year={2011},
-  publisher={Федеральное государственное образовательное учреждение высшего образования~…}
+  publisher={Федеральное государственное образовательное учреждение высшего образования~…},
+  language = "russian"
 }
